# ChangeLog for sci-mathematics/octave
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.148 2014/02/19 00:52:33 gienah Exp $

*octave-3.8.0 (19 Feb 2014)

  19 Feb 2014; Mark Wright <gienah@gentoo.org>
  +files/octave-3.8.0-JIT-64-bit-indexing.patch,
  +files/octave-3.8.0-disable-getcwd-path-max-test-as-it-is-too-slow.patch,
  +files/octave-3.8.0-fix-compile.patch,
  +files/octave-3.8.0-imagemagick-configure.patch,
  +files/octave-3.8.0-imagemagick.patch, +files/octave-3.8.0-llvm-3.4.patch,
  +files/octave-3.8.0-llvm-configure.patch,
  +files/octave-3.8.0-pkgbuilddir.patch, +octave-3.8.0.ebuild, metadata.xml:
  Bump octave to 3.8.0.

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> -octave-3.4.3-r1.ebuild:
  Drop old; punt base.eclass

*octave-3.6.4-r1 (07 Dec 2013)

  07 Dec 2013; Justin Lecher <jlec@gentoo.org> +octave-3.6.4-r1.ebuild,
  +files/octave-3.6.4-gcc-4.8.patch:
  Get gcc-4.8 fix from debian, #492488, https://savannah.gnu.org/bugs/?38746,
  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=705485

  18 Jul 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  octave-3.6.4.ebuild:
  Keyword ~arm.

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> octave-3.6.4.ebuild:
  Stable for ppc64, wrt bug #473850

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> octave-3.6.4.ebuild:
  Stable for amd64, wrt bug #473850

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> octave-3.6.4.ebuild:
  Stable for x86, wrt bug #473850

  24 Jun 2013; Agostino Sarubbo <ago@gentoo.org> octave-3.6.4.ebuild:
  Stable for ppc, wrt bug #473850

  23 Jun 2013; Jeroen Roovers <jer@gentoo.org> octave-3.6.4.ebuild:
  Stable for HPPA (bug #473850).

  19 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org>
  -files/octave-3.6.3-rcond.patch, -octave-3.6.3.ebuild,
  files/octave-3.6.4-texinfo.patch, octave-3.6.4.ebuild:
  More texinfo fix, thanks Caster Ti.Vector (bug #473756)
