@@ -19,13 +19,13 @@ DIST octave-3.6.4.tar.bz2 15627315 SHA256 fa185df9591f5d740f4d37ff6eaf06db576fdd
 DIST octave-3.8.0.tar.bz2 17669638 SHA256 519330c6dd34eb69ca26a811722948fceac2acebd67ba924eba9b34a2e5a94f9 SHA512 2e8b81b418e235cddd6678d7cc83b8441c64b36f98854ab704c1b34d5ff711d3f6cce7ffe33f5f70a7bc231b2219b39d16033e6b9d04174cbab68f21c5a8abec WHIRLPOOL ace3d162722b0e47d78fbf8029396c3e5690a4260d5fcef09be4a1a58f7a1144888f5829a47f77d344ca20fa6844c55b80955e7093c5cd2e98a89188b6ec3708
 EBUILD octave-3.6.4-r1.ebuild 3509 SHA256 3eec5c95449373742628be9031622a5b7c6771203df72da13f3654be9c011c50 SHA512 1e4e72e3f67a46c31ee84208141535305d2daa6770dd2767cc523951e140d95de0bda897a1a0f1f88a16cd120b0cccf6ee7691d73effb02d83b1d8b760c85564 WHIRLPOOL 3bf445ad674658f35f0b3ea0665788d328c84f12d166c6f512033b4531c6a9260806d4d68256dc974826abadf85994fcd7cadd64368cd9c4ebd818974c224177
 EBUILD octave-3.6.4.ebuild 3478 SHA256 686c2b49e3aaadf7bc41ecc46908126d65f1510c285a575efb74a5586d28d3b4 SHA512 897cac6e403bf709b6eafa0fa885905b91015d40cff5fd7d6187bd45c0ec95dd68dee3415152b9c29b85bc48b781797b1ada9d3001ea0625c6f97f5bd4dd48b7 WHIRLPOOL 09fdeafb13a7a814fd1304a493c76227fe7b0b7ea420cdcab2c944864a0319f62505f214be9796edee57cc370e8a7e6be0dbbe55035afbbc2a4c37033a6bebf4
-EBUILD octave-3.8.0.ebuild 6046 SHA256 02c0544f40965a7905d74e43453cd7b4bfca8d3c568afed0d0674e67fe0ddad4 SHA512 eba51b6e6fac9b1ad1d656ffa890a9f67634f9c9afba71e596775022be45c0cba85bccd69adf147dfb9ad5c85d6321536d6baf58f7cf1a0750ea305ffb1d1d9e WHIRLPOOL 30ed8621951cd56d80f5a2c59a1d261c6718de805d55555d444351b95846f2aa5213b4c4e41c610ee07f5264f0bd93b3096814c99ad042abf280fd6135351fd3
-MISC ChangeLog 34516 SHA256 04f68e945c2c26f9c6c954a0620dfcc4c851eaa57ff09159a558d909c1e1b1f8 SHA512 2bf16f09cc2eb95b604eaa3a888652e1dd707f24787149ed01b32bcaf43421babb6002222655540de72da98c91b68ffb91bce09933ffa3958cd5a47cdb2360ad WHIRLPOOL 4d1ca1f69153a2f57bdaa7ed4ceb998cf5655d45279b63f8d892dd51ca4969c81b77c89f8c22b0c47c5426e531d89918337a4313144db198446a41677f7d8c76
+EBUILD octave-3.8.0.ebuild 6048 SHA256 e34d19d0e42a934ba64899740fe773c5456815f7bc579486201b6ef62e0f722e SHA512 9a057cdffbf24896d8344af8c4108f80303aac0e5af99026e1b673175cf8fe2693a7eb8d82d2b29b4ec8606781aae25ef6296df2eaa7388a07f8e5bc3f61cadf WHIRLPOOL 5b4d71d39cf6691be7b75f4b6d3d027cb1cd8f2ba4f341210012b08e54df5d6ee6878f5da594c589c26c7e26b025353e5091286f9924045c6174312f94587c85
+MISC ChangeLog 34766 SHA256 bdeba11e2970791a5c1a88473f371f746c37763e39124b659af0f71eaf6d9975 SHA512 9f0860b1f2c6e90987c4faadff508cd5f8fe0d00617be66d802b01c3388be377d21967b7da1d0b15b256ec6a0e92f51714d647417984df77f2bc6f27f6e70535 WHIRLPOOL 0bb8a16d004a49cc60b33493dcc69c0f5339be1a08e18e087503f27b532564a447c707b592948a833aa1be256797ef468d50e49f6052f215ab5030259e53d56c
 MISC metadata.xml 1022 SHA256 1b65adbdcc076642a258fff07b7e362922ac22a8498b20bd96e2c97a2ea45a10 SHA512 bf855dac972af2db8e39396a50fbdc1199f28bf4b29cf2c78315f608584f0258a12985f021003b84553bf289c734397d8c7f92666c022b6b1f68f1ebccf89966 WHIRLPOOL b6d90f1eeec501dab72503cc677792abca0fbc1476d627868090abc2438940ec24088fc95a53df058dffc793f8101a7057a85c64aef6395da6c39864c2f45305
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlMEAFoACgkQoBEVQmGOlx9OSwEArhStI5T4Iha0ngWoi3Nhday7
-5e+/TiMKsG8ztu7v5T8A/2GWJ8v1WUlnePapqeNCyyjmYKYdtuAisHjwFtvrOgSI
-=jQUj
+iF4EAREIAAYFAlMFQq0ACgkQoBEVQmGOlx8OxAD/dJsnnCCffso0w+hXLbwUQTYu
+eoGr7cBSyJ4mhKr1IZIBALzQlmovVqjdMqBBVFs39quLv/Rw1NXK1oQ0Y8fgRXuc
+=xbw4
 -----END PGP SIGNATURE-----
