@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/octave-3.8.0.ebuild,v 1.1 2014/02/19 00:52:33 gienah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/octave-3.8.0.ebuild,v 1.2 2014/02/19 23:47:48 gienah Exp $
 
 EAPI=5
 
@@ -82,7 +82,7 @@ PATCHES=(
 pkg_pretend() {
 	if use qrupdate || use sparse; then
 		local blaslib=$(pkg-config --libs-only-l "blas" | sed -e 's@.*-l@lib@' | cut -d' ' -f 1)
-		einfo "Checking dependencies are built wtih the same blas lib = ${blaslib}"
+		einfo "Checking dependencies are built with the same blas lib = ${blaslib}"
 		local usr_lib="${ROOT}usr/$(get_libdir)"
 		local libs=( )
 		use qrupdate && libs+=( "${usr_lib}"/libqrupdate.so )
@@ -98,10 +98,10 @@ pkg_pretend() {
 			# earlier versions of sci-libs/cholmod were not linked with blas, while as later
 			# versions are if built with the lapack use flag.
 			scanelf -n ${i} | grep -q "${blaslib}"
-			if [[ $? != 0 ]]; then
+			if [[ $? -ne 0 ]]; then
 				# Does it appear to be linked with some blas or lapack library?
 				scanelf -n ${i} | egrep -q "blas|lapack"
-				if [[ $? == 0 ]]; then
+				if [[ $? -eq 0 ]]; then
 					eerror "*******************************************************************************"
 					eerror "${i} must be rebuilt with ${blaslib}"
 					eerror ""
