@@ -1,6 +1,11 @@
 # ChangeLog for sci-mathematics/octave
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.148 2014/02/19 00:52:33 gienah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.149 2014/02/19 23:47:48 gienah Exp $
+
+  19 Feb 2014; Mark Wright <gienah@gentoo.org> octave-3.8.0.ebuild:
+  Thanks to Olivier Huber for fixing and reporting bug 501784: replace the use
+  of "!=" and "==" in pkg_pretend with the proper operator "-ne" and "-eq". One
+  typo is also fixed.
 
 *octave-3.8.0 (19 Feb 2014)
 
